# DinnerPlanner

./: .gitignore  CMakeLists.txt  DB.cpp  DB.h  DinnerPlannerGui_Qt.pro  DinnerPlannerGui_Qt.pro.user.006650d  DinnerPlannerGui_Qt.pro.user.36f85f1  MainWindow.cpp  MainWindow.h  MainWindow.ui  Makefile  Network.cpp  Network.h  Recipe.h  Recipe_View.cpp  Recipe_View.h  main.cpp  meson.build  recipe_view.glade  recipes.sqlite
src/: DB.cpp  DB.h  Image.cpp  Image.h  Network.h  Recipe.h  Recipe_View.h  db.c  db.h  gui.c  gui.cpp  gui.h  main.cpp  network.c  network.cpp  network.h  recipes.c  recipes.cpp  recipes.h
